feat:coupon validation
